# qtcloud-think

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md
docs/: README.md
docs/brd/: index.md
docs/dev/: README.md  collector.md  index.md  meta.md  workspace.md
docs/prd/: README.md
docs/spec/: data.md  index.md
docs/testing/: module-checker.md
docs/user/: index.md  workspace.md
examples/prototype/: annotation_screen.html  cogitive_prism.html  observe_screen.html
scripts/: collect  run-provider  run-studio
src/cli/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  clarifier.py  llm_client.py  main.py  meta.py  pyproject.toml  storage.py
src/cli/app/: clarifier.py  main.py  meta.py  prompts.py  session_recorder.py  storage.py  workspace.py
src/cli/src/: ai.rs  analyze.rs  app.rs  config.rs  db.rs  journal_repo.rs  lib.rs  main.rs  model.rs  repo.rs  storage.rs  summarize.rs  ui.rs
src/cli/tests/: repo.rs
src/connector/: __init__.py  base.py  cli.py  pyproject.toml  registry.py
src/provider/: main.py  requirements.txt
src/provider/api/v1/: clarify.py  meta.py  notes.py  workspace.py
src/provider/app/agents/: meta.py  observer.py  sower.py
src/provider/app/skills/: clarify.py  distill.py  express.py  organize.py
src/provider/core/: clarifier.py  storage.py
src/provider/tests/: test_agents.py
src/studio/: CHANGELOG.md  pubspec.yaml
src/studio/lib/: main.dart
src/studio/lib/models/: journal_data.dart  log_data.dart  prism_data.dart
src/studio/lib/samples/: card_samples.dart  journal.dart  journal_samples.dart
src/studio/lib/screens/: annotation_screen.dart  cognitive_prism_screen.dart
src/studio/linux/: CMakeLists.txt
src/studio/linux/runner/: my_application.cc
tests/: test_module_checker.py  test_system.py
tests/fixtures/journal/episodic/: 2026-03-13_自我复现知识库设想.json  2026-03-15_日志进化方向.json  2026-03-19_叙事方法.json  2026-03-19_叙事线索.json  2026-03-19_叙事风格.json  2026-03-21_上架发布心理阻碍的长期存在.json  2026-03-21_分类问题的长期存在.json  2026-03-21_如何与AI协同的探索.json  2026-03-21_对正式感执念的自我认知突破.json  2026-03-21_总结规律与直觉思维的拉扯长期存在.json  2026-03-21_想法碎片多但未分类流转的长期困扰.json  2026-03-22_写作工具需求.json  2026-03-22_写作直觉与AI结合.json  2026-03-22_第二大脑内容结构.json  2026-03-27_思考日志__对话中展现观察与行动.json  2026-03-28_行政区划的研究反思.json
tests/fixtures/journal/procedural/: 2026-03-13_构建知识库种子最小原型.json  2026-03-15_共同构建外脑.json  2026-03-15_金字塔架构与分层处理.json  2026-03-19_编辑建议.json  (+4 more)
(+30 files in other folders)
