[package]
name = "qtcloud-think-cli"
version = "0.1.0"
edition = "2021"
description = "量潮思考云命令行工具"
authors = ["quanttide"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# AI API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
dirs = "6"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
