[project]
name = "qtcloud-think-connector"
version = "0.1.0"
description = "qtcloud-think 连接器插件系统"
requires-python = ">=3.11"
dependencies = [
    "importlib-metadata>=8.0.0",
    "typer>=0.12.0",
]

[project.scripts]
qtcloud-connector = "connector.cli:main"

[project.entry-points."qtcloud.connectors"]
default = "connector.base:BaseConnector"

[tool.setuptools.packages.find]
where = ["."]
include = ["connector*"]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
